--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # This is the basic info about your site. Definitely change this.
 title: Hrajeme Pro 2022
 description: 
-author: Kvído Potápník
+author: Radeksoft
 
 url: "" # the base hostname & protocol for your site, e.g. https://example.com
 
